--- a/Reaction/index.html
+++ b/Reaction/index.html
@@ -31,10 +31,11 @@
           <p>WEBPUBLISHER</p>
         </h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-          quibusdam libero enim provident quaerat repellat doloremque officiis
-          voluptatum saepe eius dolores incidunt soluta, sequi reprehenderit
-          quos impedit ducimus magni esse?
+          HTML, CSS, JavaScript를 활용하여 디자인 뿐만 아니라, 이를 웹 공간에 구현하고 관리하는 웹 퍼블리셔는, <br>
+서버의 데이터를 사용자에게 보여주고, <br>사용자가 입력한 데이터를 서버에 전달하는 부분까지 관리하는 역량과 
+자질이 필수라고 생각합니다.<br>
+독창적이고 창의적인 아이디어를 바탕으로 '디자인'을 설계하고, 이를 구현하도록 계획하는 능력, 계획한 요소를 실제로 구현할 수 있는 기술까지 동시에 
+작업가능한 다채로운 인재가 되기 위해 <br>노력하겠습니다.
         </p>
         <!-- h1태그는 한 페이지에 한 개가 있는 것이 권장사항, 모든 페이지에 꼭 한 개는 있어야한다. -->
         <div>
@@ -56,27 +57,25 @@
           <ul>
             <li>
               <h3>#INTRODUCE</h3>
-              <p>NAME</p>
-              <p>PHONE</p>
-              <p>EMAIL</p>
+              <p>NAME : </p>
+              <p>PHONE : </p>
+              <p>EMAIL : </p>
             </li>
             <li>
               <h3>#I'AM</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Delectus, commodi officia! Veniam cumque distinctio id
-                temporibus dolorem eveniet. Iure reiciendis neque fugiat rem
-                labore, est similique nostrum accusantium placeat quod?
+                어제보다 더 나은 오늘을 꿈꾸는 최은영입니다.<br>
+                'Venture ourside your comport zone'이라는 <br>라푼젤의 명대사처럼,
+                현재에 안주하지 않고 <br>매일 한 걸음씩 성장하는 사람이 되기 위해 <br>노력하고 있습니다.
+
+
               </p>
             </li>
             <li>
               <h3>#SKILLS</h3>
               <div class="skill">
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Voluptates possimus molestias aut, porro soluta reiciendis
-                  earum non laboriosam ipsa esse aspernatur, rem odit, vero
-                  totam ea impedit asperiores? Laboriosam, modi.
+                  #HTML #CSS3 #Javascript #Photoshop #Illustrator #React #Vue
                 </p>
               </div>
             </li>
@@ -102,15 +101,13 @@
             <div class="overview">
               <p class="title">OVERVIEW</p>
               <p class="detail">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-                obcaecati ut debitis consectetur. Exercitationem, odit adipisci
-                perspiciatis, unde, tempore expedita nemo aspernatur similique
-                voluptatum doloremque asperiores! Deleniti nam corrupti totam?
+                사용자 친화적인 인터페이스와 다양한 콘텐츠 접근 방식을 제공하는 Netflix 웹페이지 특성을<br> 참고한 React 활용 UI,UX 웹 애플리케이션을 개발하였습니다.
+또한, 비동기 데이터 처리를 <br>강조하여 효율적인 사용 환경을 구현하였습니다.
               </p>
             </div>
             <div class="txt">
-              <p>UI디자인 제작 방식 : PhotoShop</p>
-              <p>퍼블리싱 제작 방식 : HTML + CSS</p>
+              <p>UI디자인 제작 방식 : Figma를 이용한 디자인 구축 후 코드 구현</p>
+              <p>퍼블리싱 제작 방식 : React, React Router, TMDB APT 연동</p>
               <p>레이아웃 제작 방식 : CSS Flex</p>
               <p>제작 참여율 : 100%</p>
               <p>제작 소요 시간 : 2일</p>
