--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -48,42 +48,85 @@
         <div class="resume">           
           <div class="profile">
             <h3>브랜드의 정체성을 <br>디자인하는 기획자</h3>  
-            <p>NAME 최은영</p>
-            <p>BIRTH 1990.11.21</p>           
-            <p>E-MAIL dms1dud122@naver.com</p>
+            <p>최은영</p>
+            <p>1990.11.21</p>           
+            <p>dms1dud122@naver.com</p>
             <div class="education">
-            <h4>Education</h4>
-            <p>2016.02 경희대학교 의류디자인학과 졸업</p>
-            <p>2024.10-2025.03 
-              <br>수원 MBC 아카데미 컴퓨터학원
-              <br>리액트&뷰 기반 <br>프론트엔드 웹퍼블리셔 전문가 양성과정 수료</p>
+            <h4>Education</h4> 
+            <div class="edu-main">
+              <div class="edu-num">
+                <p>2016.02 </p>
+                <p>2024.10-2025.03</p>
+              </div>
+              <div class="edu-contain">
+                <p>경희대학교 의류디자인학과 졸업</p>
+                <p>수원 MBC 아카데미 컴퓨터학원
+                  <br>리액트&뷰 기반 <br>프론트엔드 웹퍼블리셔 전문가 양성과정 수료</p>
+              </div>
+            </div>         
+            <!-- <p>2016.02 
+              경희대학교 의류디자인학과 졸업</p>
+            <p>2024.10-2025.03 수원 MBC 아카데미 컴퓨터학원
+              <br>리액트&뷰 기반 <br>프론트엔드 웹퍼블리셔 전문가 양성과정 수료</p> -->
             </div>
             <div class="career">
-              <h4>Career</h4>
-            <p>2016-2017 (주)코코 마케팅부서 근무</p>
+              <h4>Career</h4> 
+              <div class="career-main">
+                <div class="career-num">
+                  <p>2016-2017</p>
+                  <p>2018.01-2018.05</p>
+                  <p>2018.06-2023</p>
+                </div>
+                <div class="career-contain">
+                  <p>(주)코코 마케팅부서 근무</p>
+                  <p>키즈랩 잉글리쉬 근무</p>
+                  <p>자영업</p>
+                </div>
+              </div>             
+            <!-- <p>2016-2017 (주)코코 마케팅부서 근무</p>
             <p>2018.01-2018.05 키즈랩 잉글리쉬 근무 
-            <p>2018.06-2023 자영업</p>           
+            <p>2018.06-2023 자영업</p>            -->
           </div>
             </div>
           <p class="proline"></p>          
           <div class="Certificate">            
             <h3>Skills</h3>   
-            <p>Photoshop : <progress id="progress" value="80" min="0" max="100"></progress> 80%</p>
-            <p>Illustrator : <progress id="progress" value="80" min="0" max="100"></progress> 80%</p>
-            <p>Figma : <progress id="progress" value="70" min="0" max="100"></progress> 70%</p>
-            <p>HTML5 : <progress id="progress" value="70" min="0" max="100"></progress> 70%</p>
-            <p>CSS3 : <progress id="progress" value="70" min="0" max="100"></progress> 70%</p>
-            <p>JavaScript : <progress id="progress" value="60" min="0" max="100"></progress> 60%</p>
-            <p>React : <progress id="progress" value="60" min="0" max="100"></progress> 60%</p>
-            <p>Vue3 : <progress id="progress" value="60" min="0" max="100"></progress> 60%</p>
+            <div class="certi-img">
+              <img src="./images/photoshop.png">
+              <img src="./images/illustrator.png">
+              <img src="./images/figma.png">              
+              <img src="./images/react.png">
+              <img src="./images/vue.png">
+              <img src="./images/html.png">
+              <img src="./images/css.svg">
+              <img src="./images/javascript.png">            
+            </div>
+            
             <h3>Certificate</h3>
-            <p>2025 1회 컬러리스트기사 필기 합격(연내 취득예정)</p>         
+            <div class="certi-main">
+              <div class="certi-num">
+                <p>2025</p>
+                <p>2024</p>
+                <p>2024</p>
+                <p>2022</p>
+              </div>
+              <div class="certi-contain">
+                <p>1회 컬러리스트기사 필기 합격(연내 취득예정)</p>
+                <p>GTQ 1급(포토샵)</p>
+                <p>GTQi 1급(일러스트)</p>
+                <p>33회 공인중개사</p>
+                <p>정보처리기능사</p>
+                <p>워드프로세서 1급</p>
+                <p>컴퓨터활용능력 2급</p>
+              </div>
+            </div>
+            <!-- <p>2025 1회 컬러리스트기사 필기 합격(연내 취득예정)</p>         
             <p>2024 GTQ 1급(포토샵)</p>
             <p>2024 GTQi 1급(일러스트)</p>
-            <p>2022.12 33회 공인중개사</p>
+            <p>2022 33회 공인중개사</p>
             <p>정보처리기능사</p>
             <p>워드프로세서 1급</p>
-            <p>컴퓨터활용능력 2급</p>
+            <p>컴퓨터활용능력 2급</p> -->
           </div>
           <p class="certiline"></p>
           <div class="Project">
