--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -192,7 +192,7 @@
                   <!-- <button>MORE</button> -->
                 </div>
                 <div class="web-page">
-                  <video src="./video/light.mp4" muted autoplay playsinline>
+                  <video src="./video/netflix.mp4" muted autoplay playsinline loop>
                 </div>
               </div>
             </div>
@@ -231,7 +231,7 @@
                   <!-- <button>MORE</button> -->
                 </div>
                 <div class="web-page">
-                  <video src="./video/light.mp4" muted autoplay playsinline>
+                  <video src="./video/tesla.mp4" muted autoplay playsinline loop>
                 </div>
               </div>
             </div>
@@ -270,7 +270,7 @@
                   <!-- <button>MORE</button> -->
                 </div>
                 <div class="web-page">
-                  <video src="./video/light.mp4" muted autoplay playsinline>
+                  <video src="./video/airbnb.mp4" muted autoplay playsinline loop>
                 </div>
               </div>
             </div>
@@ -310,7 +310,7 @@
                     <!-- <button>MORE</button> -->
                   </div>
                   <div class="web-page">
-                    <video src="./video/light.mp4" muted autoplay playsinline>
+                    <video src="./video/momentum.mp4" muted autoplay playsinline loop>
                   </div>
                 </div>
               </div>
@@ -369,7 +369,7 @@
             <!-- <button>MORE</button> -->
           </div>
           <div class="web-page">
-            <video src="./video/light.mp4" muted autoplay playsinline>
+            <video src="./video/mobile.mp4" muted autoplay playsinline loop>
           </div>
         </div>
       </div>
@@ -408,7 +408,7 @@
             <!-- <button>MORE</button> -->
           </div>
           <div class="web-page">
-            <video src="./video/light.mp4" muted autoplay playsinline>
+            <video src="./video/vue3.mp4" muted autoplay playsinline loop>
           </div>
         </div>
       </div>
@@ -446,7 +446,7 @@
             <!-- <button>MORE</button> -->
           </div>
           <div class="web-page">
-            <video src="./video/light.mp4" muted autoplay playsinline>
+            <video src="./video/kidkids.mp4" muted autoplay playsinline loop>
           </div>
         </div>
       </div>
@@ -486,7 +486,7 @@
             <!-- <button>MORE</button> -->
           </div>
           <div class="web-page">
-            <video src="./video/light.mp4" muted autoplay playsinline>
+            <video src="./video/blogweb.mp4" muted autoplay playsinline loop>
           </div>
         </div>
       </div>
