--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -112,7 +112,7 @@
                 <p>그 외</p>
               </div>
               <div class="certi-contain">
-                <p>1회 컬러리스트기사 필기 합격(연내 취득예정)</p>
+                <p>1회 컬러리스트기사 필기 합격</p>
                 <p>GTQ 1급(포토샵)</p>
                 <p>GTQi 1급(일러스트)</p>
                 <p>33회 공인중개사</p>
